web-infras/parser/tests/fixtures/babel/es2015/let/let-at-catch-block/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,7)
2|  let let;
 |     ^
